# SkyBox

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP-feature-jit-migration.md  context.md  opencode.json
crates/cf-worker-builder/: Cargo.toml
crates/cf-worker-builder/src/: main.rs
crates/matchbox-cf-worker/: AGENTS.md  Cargo.toml  README.md
crates/matchbox-cf-worker/examples/: build.sh  run-workerd-test.sh
crates/matchbox-cf-worker/examples/chatroom/: build-multi.sh  package.json  test_chatroom.js  wasm_glue.js  wrangler.toml
crates/matchbox-cf-worker/examples/counter/: matchbox_cf_worker.d.ts  package.json  test_counter.capnp  wrangler.toml
crates/matchbox-cf-worker/examples/echo/: package.json  test_minimal.js  test_wasm2.capnp  test_wasm4.js  worker.wasm  wrangler.toml
crates/matchbox-cf-worker/examples/jsonfmt/: mcf-worker.js  package.json  wrangler.toml
crates/matchbox-cf-worker/examples/moonphase/: matchbox_cf_worker.d.ts  package.json  wrangler.toml
crates/matchbox-cf-worker/examples/romannumeral/: RomanNumeralListener.bx  mcf-worker.js  package.json  test_romannumeral.js  wrangler.toml
crates/matchbox-cf-worker/examples/skychat/: mcf-worker.js
crates/matchbox-cf-worker/samples/: chatroom.bxs  counter.bxs  echo.bxs  room_manager.bxs
crates/matchbox-cf-worker/shell/: mcf-worker.js  wrangler.toml  wrangler.toml.example
crates/matchbox-cf-worker/src/: bifs.rs  build.rs  channel.rs  do_adapter.rs  lib.rs  types.rs  wasm_exports.rs  wasm_metadata.rs
crates/matchbox-cf-worker/tests/: websocket_test.rs
(+289 files in other folders)
